--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
 ]
 requires-python = ">=3.0"
 authors = [
-  {name = "David A. Brown", email = "dbrown@bnl.gov"},
+  {name = "David A. Brown", email = "dbrown@bnl.gov"}
 ]
 maintainers = [
   {"David A. Brown", email = "dbrown@bnl.gov"}
