move requirements to toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,16 @@ build-backend = "setuptools.build_meta"
 name = "x4i"
 dynamic = ["version"]
 requires-python = ">=3.0"
+dependencies = [
+  "numpy > 1.2",
+  "pint > 0.20",
+  "pandas > 2",
+  "pint_pandas",
+  "pytest > 8.2",
+  "pyparsing >= 3.1.2",
+  "bidict",
+  "tabulate >= 0.9"
+]
 authors = [
   {name = "David A. Brown", email = "dbrown@bnl.gov"}
 ]
