--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ dependencies = [
   "pint > 0.20",
   "pandas > 2",
   "pint_pandas",
-  "pytest > 8.2",
   "pyparsing >= 3.1.2",
   "bidict",
   "tabulate >= 0.9"
@@ -29,6 +28,11 @@ keywords = ["EXFOR", "nuclear reaction data"]
 classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Programming Language :: Python"
+]
+
+[project.optional-dependencies]
+test = [
+    "pytest > 8.2",
 ]
 
 [project.urls]
