add check_exfor as cli

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ test = [
 setup-exfor-db-index = "x4i.cli.setup_exfor_db_index:main"
 get-exfor-entry = "x4i.cli.get_exfor_entry:main"
 install-exfor-db = "x4i.cli.install_exfor_db:main"
+check_exfor = "x4i.cli.check_exfor:main"
 
 [project.urls]
 Homepage = "https://github.com/brown170/x4i"
